package com.geekbrains.tests.view.search

import android.view.View
import android.widget.Button
import android.widget.EditText
import android.widget.ProgressBar
import android.widget.TextView
import androidx.lifecycle.Lifecycle
import androidx.test.core.app.ActivityScenario
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.UiController
import androidx.test.espresso.ViewAction
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.geekbrains.tests.BuildConfig
import com.geekbrains.tests.R
import com.geekbrains.tests.TEST_NUMBER
import com.geekbrains.tests.TEST_NUMBER_OF_RESULTS_42
import junit.framework.TestCase
import org.hamcrest.Matcher
import org.junit.After
import org.junit.Before
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class MainActivityTest {

    private lateinit var scenario: ActivityScenario<MainActivity>

    @Before
    fun setup() {
        scenario = ActivityScenario.launch(MainActivity::class.java)
    }

    @Test
    fun activity_AssertNotNull() {
        scenario.onActivity {
            TestCase.assertNotNull(it)
        }
    }

    @Test
    fun activity_IsResumed() {
        TestCase.assertEquals(Lifecycle.State.RESUMED, scenario.state)
    }

    @Test
    fun activityProgressBar_NotNull() {
        scenario.onActivity {
            val totalCountTextView = it.findViewById<ProgressBar>(R.id.progressBar)
            TestCase.assertNotNull(totalCountTextView)
        }
    }

    @Test
    fun activityEditText_NotNull() {
        scenario.onActivity {
            val totalCountTextView = it.findViewById<EditText>(R.id.searchEditText)
            TestCase.assertNotNull(totalCountTextView)
        }
    }

    @Test
    fun activityEditText_HasText() {
        val assertion = matches(withHint("Enter keyword e.g. android"))
        onView(withId(R.id.searchEditText)).check(assertion)
    }

    @Test
    fun activityEditText_IsCompletelyDisplayed() {
        onView(withId(R.id.searchEditText)).check(matches(isCompletelyDisplayed()))
    }

    @Test
    fun activityStartSearchButton_NotNull() {
        scenario.onActivity {
            val totalCountTextView = it.findViewById<Button>(R.id.startSearch)
            TestCase.assertNotNull(totalCountTextView)
        }
    }

    @Test
    fun activityStartSearchButton_HasText() {
        val assertion = matches(withText("Search"))
        onView(withId(R.id.startSearch)).check(assertion)
    }


    @Test
    fun activityStartSearchButton_IsCompletelyDisplayed() {
        onView(withId(R.id.startSearch)).check(matches(isCompletelyDisplayed()))
    }

    @Test
    fun activityStartSearchButton_AreEffectiveVisible() {
        onView(withId(R.id.startSearch)).check(matches(withEffectiveVisibility(
            Visibility.VISIBLE)))
    }

    @Test
    fun activityStartSearchButton_IsWorking() {
        onView(withId(R.id.searchEditText)).perform(click())
        onView(withId(R.id.searchEditText)).perform(replaceText("algol"), closeSoftKeyboard())
        onView(withId(R.id.startSearch)).perform(click())

        if (BuildConfig.TYPE == MainActivity.FAKE) {
            onView(withId(R.id.totalCountTextView)).check(matches(withText(TEST_NUMBER_OF_RESULTS_42)))
        } else {
            onView(isRoot()).perform(delay())
            onView(withId(R.id.totalCountTextView)).check(matches(withText("Number of results: 2638")))
        }
    }

    @Test
    fun activityDetailsActivityButton_NotNull() {
        scenario.onActivity {
            val totalCountTextView = it.findViewById<Button>(R.id.toDetailsActivityButton)
            TestCase.assertNotNull(totalCountTextView)
        }
    }

    @Test
    fun activityDetailsActivityButton_HasText() {
        val assertion = matches(withText("to details"))
        onView(withId(R.id.toDetailsActivityButton)).check(assertion)
    }

    @Test
    fun activityDetailsActivityButton_IsCompletelyDisplayed() {
        onView(withId(R.id.toDetailsActivityButton)).check(matches(isCompletelyDisplayed()))
    }

    @Test
    fun activityDetailsActivityButton_AreEffectiveVisible() {
        onView(withId(R.id.toDetailsActivityButton)).check(matches(withEffectiveVisibility(
            Visibility.VISIBLE)))
    }

    @Test
    fun activityTextView_NotNull() {
        scenario.onActivity {
            val totalCountTextView = it.findViewById<TextView>(R.id.totalCountTextView)
            TestCase.assertNotNull(totalCountTextView)
        }
    }

    @Test
    fun activityTextView_IsCompletelyDisplayed() {
        onView(withId(R.id.searchEditText)).perform(click())
        onView(withId(R.id.searchEditText)).perform(replaceText("$TEST_NUMBER"), closeSoftKeyboard())
        onView(withId(R.id.searchEditText)).perform(pressImeActionButton())
        onView(isRoot()).perform(delay())
        onView(withId(R.id.totalCountTextView)).check(matches(isCompletelyDisplayed()))
    }

    @Test
    fun activitySearch_IsWorking() {
        onView(withId(R.id.searchEditText)).perform(click())
        onView(withId(R.id.searchEditText)).perform(replaceText("algol"), closeSoftKeyboard())
        onView(withId(R.id.searchEditText)).perform(pressImeActionButton())

        if (BuildConfig.TYPE == MainActivity.FAKE) {
            onView(withId(R.id.totalCountTextView)).check(matches(withText(TEST_NUMBER_OF_RESULTS_42)))
        } else {
            onView(isRoot()).perform(delay())
            onView(withId(R.id.totalCountTextView)).check(matches(withText("Number of results: 2638")))
        }
    }

    private fun delay(): ViewAction? {
        return object : ViewAction {
            override fun getConstraints(): Matcher<View> = isRoot()
            override fun getDescription(): String = "wait for $2 seconds"
            override fun perform(uiController: UiController, v: View?) {
                uiController.loopMainThreadForAtLeast(5000)
            }
        }
    }

    @After
    fun close() {
        scenario.close()
    }
}